Homework 5 fix