@@ -3,12 +3,13 @@ package ru.otus.hw05;
 import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 import org.reflections.Reflections;
+import org.reflections.scanners.Scanners;
+import org.reflections.util.ConfigurationBuilder;
 
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -17,26 +18,26 @@ import java.util.stream.Collectors;
 class Context {
 
     @Getter(AccessLevel.PRIVATE)
-    private static final Map<Class<? extends TestLoggingInterface>, List<String>> annotatedMethodsMap = new HashMap<>();
+    private static final Map<Class<?>, List<String>> annotatedMethodsMap;
 
     static {
-        val reflections = new Reflections("ru.otus.hw05");
-        reflections.getSubTypesOf(TestLoggingInterface.class).forEach(tli -> {
-            val methods = Arrays.stream(tli.getDeclaredMethods())
-                    .filter(m -> m.isAnnotationPresent(Log.class))
-                    .map(Context::methodToString)
-                    .toList();
-            annotatedMethodsMap.put(tli, methods);
-        });
+        val reflections = new Reflections(new ConfigurationBuilder().forPackages("ru.otus.hw05").setScanners(Scanners.MethodsAnnotated));
+        annotatedMethodsMap = reflections.getMethodsAnnotatedWith(Log.class).stream()
+                .collect(Collectors.groupingBy(
+                        Method::getDeclaringClass,
+                        Collectors.mapping(
+                                Context::methodToString,
+                                Collectors.toList()
+                        )));
     }
 
     public static Object createProxy(Object instance) {
         val clazz = instance.getClass();
-        if (TestLoggingInterface.class.isAssignableFrom(clazz)) {
+        if (annotatedMethodsMap.containsKey(clazz)) {
             return Proxy.newProxyInstance(
-                    LogInvocationHandler.class.getClassLoader(),
-                    new Class[]{TestLoggingInterface.class},
-                    new LogInvocationHandler<>((TestLoggingInterface) instance)
+                    instance.getClass().getClassLoader(),
+                    instance.getClass().getInterfaces(),
+                    new LogInvocationHandler<>(instance)
             );
         }
         throw new IllegalArgumentException("Создание Proxy для класса %s не поддерживается".formatted(clazz.getName()));
@@ -48,23 +49,22 @@ class Context {
 
     @Slf4j
     @ToString
-    private static class LogInvocationHandler<T extends TestLoggingInterface> implements InvocationHandler {
+    private static class LogInvocationHandler<T> implements InvocationHandler {
 
-        private final T testLoggingInterface;
-        private final Class<T> clazz;
+        private final T instance;
 
-        LogInvocationHandler(T testLoggingInterface) {
-            this.testLoggingInterface = testLoggingInterface;
-            clazz = (Class<T>) testLoggingInterface.getClass();
+        LogInvocationHandler(T instance) {
+            this.instance = instance;
         }
 
         @Override
         public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+            val clazz = (Class<T>) instance.getClass();
             val annotatedMethods = getAnnotatedMethodsMap().get(clazz);
             if (annotatedMethods.contains(methodToString(method))) {
                 log.info("Executed method: {}. Params: {}", method.getName(), Arrays.stream(args).map(Object::toString).collect(Collectors.joining(", ")));
             }
-            return method.invoke(testLoggingInterface, args);
+            return method.invoke(instance, args);
         }
 
     }
